--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -24,6 +24,7 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  flex-shrink: 0;
 }
 
 .logo {
@@ -66,4 +67,12 @@ ul {
   display: flex;
   align-items: center;
   gap: 10px;
+}
+
+li {
+  flex-shrink: 0;
+}
+
+.notifications {
+  flex-shrink: 0;
 }
